# abstractgraph-generative

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AUTOREGRESSIVE_GENERATOR_AND_REWRITE.md  ORGANIZATION.md  README.md  conditional-autoregressive-generation.md  notebooks.md  overview.md
docs/guides/: autoregressive-generator-and-rewrite.md  conditional-autoregressive-generation.md  edge-generator.md
notebooks/: README.md  _bootstrap.py
notebooks/examples/: edge_regression.ipynb  example_attributed_conditional_autoregressive_generator_simplified.ipynb  example_autoregressive_generator_molecule_generation.ipynb  example_autoregressive_generator_text_generation.ipynb  example_conditional_autoregressive_generator_molecule_generation.ipynb  example_conditional_autoregressive_generator_simplified.ipynb  example_edge_generator.ipynb  example_edge_generator_from_pair.ipynb  example_edge_generator_repair.ipynb  example_edge_generator_repair_directed_cfg.ipynb  example_interpolate_path_construction.ipynb  example_story_graph_closed_alphabet_induction.ipynb  example_story_graph_roundtrip_aesop.ipynb  example_text_graph_generation_aesop_collection.ipynb  workflow_conditional_autoregressive_molecule_generation.ipynb  workflow_digress_artificial_generation.ipynb  workflow_gran_artificial_generation.ipynb  workflow_interpolation_generator_end_to_end.ipynb  workflow_interpolation_generator_grid_generation.ipynb  workflow_interpolation_generator_molecule_generation.ipynb  workflow_molecule_optimization.ipynb  workflow_molecule_optimization_graph_estimator.ipynb  (+1 more)
scripts/: smoke_test.py
tests/: test_edge_generator.py  test_terminology_compat.py
(+85 files in other folders)
