[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstractgraph-generative"
version = "0.1.0"
description = "Generative AbstractGraph models, rewrite/interpolation/autoregressive pipelines, and story graph tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "abstractgraph>=0.1.0",
  "abstractgraph-ml>=0.1.0",
  "networkx>=3.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
story = [
  "pydot>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
abstractgraph_generative = [
  "README_CONTITIONAL_AUTOREGRESSIVE.md",
  "story/README.md",
  "story/resources/*.json",
  "legacy/conditional_v0_1/README.md",
]
